--- a/src/app.css
+++ b/src/app.css
@@ -33,3 +33,33 @@ html {
 		border-radius: var(--gradient-border-radius, 0);
 	}
 }
+
+@layer base {
+	::-webkit-scrollbar {
+		width: 9px;
+	}
+	::-webkit-scrollbar-thumb {
+		@apply bg-gray-600 rounded;
+	}
+	::-webkit-scrollbar-track {
+		@apply rounded bg-transparent;
+	}
+
+	input[type='search']::-webkit-search-decoration,
+	input[type='search']::-webkit-search-cancel-button,
+	input[type='search']::-webkit-search-results-button,
+	input[type='search']::-webkit-search-results-decoration {
+		-webkit-appearance: none;
+	}
+
+	input::-webkit-outer-spin-button,
+	input::-webkit-inner-spin-button {
+		-webkit-appearance: none;
+		margin: 0;
+	}
+
+	/* Firefox */
+	input[type='number'] {
+		-moz-appearance: textfield;
+	}
+}
